MDEV-7883 Segmentation failure when running mysqladmin -u root -p

take into account that argc can be 0
(if there were no commands on the command line)